# flox

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FAQ.md  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  turbo.json
.claude/commands/: build.md  page.md
.github/workflows/: ci.yml
apps/ml-inference/: Dockerfile  package.json
apps/simulator/: Dockerfile  package.json  project.json  run.py  test_simulator.py
apps/webapp/: index.html  package.json  project.json  proxy.ts  tailwind.config.ts  vite.config.ts
apps/worker/: Dockerfile  package.json  project.json  requirements.docker.txt  test_worker_ml.py  worker.py
docker/: fastapi.Dockerfile  ml.Dockerfile  requirements.ml.txt  simulator.Dockerfile  webapp.Dockerfile  worker.Dockerfile
ml/: DEPLOYMENT.md  README.md  inference.py  package.json  project.json
ml/bayesian/: bridge.py  inference.py  network.py
ml/data/: README.md  anomaly_dataset.csv  dataset_builder.py  etl.py
ml/models/: __init__.py  arch.py  synthetic_benchmark_exploration.ipynb  train.py
ml/simulation/: __init__.py  __main__.py  engine.py  scenarios.py  state.py  topology.py  visualize.py
ml/tests/: conftest.py  test_etl.py  (+3 more)
scripts/: record.py
shacklib/: agent.py  backend_state.py  codex_agent.py  diagnosis_engine.py  elevenlabs_agent.py  ml_diagnosis.py  ml_inference_client.py  mock_datacenter.py  mock_facility.py  node_simulator.py  package.json  project.json  simulation_service.py  state_seed.py  test_exports.py  test_ml_diagnosis.py
src/: main.py  render_bayesian_graph.py
(+81 files in other folders)
