[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultiplate"
version = "0.1.0"
description = "AI-native full-stack template with web, backend, worker, and ML apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic",
  "beautifulsoup4",
  "celery[redis]",
  "fastapi",
  "flask",
  "flask-cors",
  "matplotlib",
  "ml",
  "numpy",
  "pandas",
  "pydantic",
  "pymupdf",
  "python-dotenv",
  "python-multipart",
  "python-logging-loki",
  "psycopg[binary]",
  "pyyaml",
  "redis",
  "requests",
  "scikit-learn",
  "scipy",
  "seleniumbase",
  "streamlit",
  "tensorboard",
  "torch",
  "tqdm",
  "uvicorn[standard]",
  "xgboost",
  "elevenlabs>=2.39.0",
]

[project.optional-dependencies]
mlflow = ["mlflow"]

[dependency-groups]
dev = [
  "black",
  "mypy",
  "pytest",
  "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["shacklib*"]
exclude = ["apps*", "ml*", "tests*"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
ml = { path = "packages/ml", editable = true }
